# TrackTails

./: .env  .env.save  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  example.env  nginx.conf  package-lock.json  package.json  wait-for-it.sh
.github/: issue_template.md
AnimalsDataCore/: pom.xml
actionservice/: Dockerfile  Dockerfile.dev  pom.xml
animalsdataservice/: Dockerfile  pom.xml
animalservice/: .gitignore  Dockerfile  Dockerfile.dev  pom.xml
datacollector/: Dockerfile  Dockerfile.dev  pom.xml
datasource/: README.md  docker-compose.yml  pyproject.toml
datasource/datasource/: connectionwithdb.py  device.py  main.py  producer.py
gateway/: Dockerfile  Dockerfile.dev  pom.xml
notificationservice/: Dockerfile  Dockerfile.dev  pom.xml
pwa/: Dockerfile  Dockerfile.dev  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
pwa/public/: service-worker.js
pwa/src/: App.jsx  consts.js  main.jsx  useWebSocket.js  utils.js
pwa/src/components/: Chart.jsx  InputField.jsx  Layout.jsx  LayoutAnimal.jsx  LayoutMap.jsx  LayoutMapDetails.jsx  Map.jsx  Navbar.jsx  NotificationComponent.jsx  TimeRangeSelector.jsx
pwa/src/contexts/: AnimalContext.jsx
pwa/src/pages/: Details.jsx  EditPet.jsx  Finders.jsx  GeneratePdfPage.jsx  HistoricalAnimalsData.jsx  Home.jsx  InitialPage.jsx  Login.jsx  Map.jsx  MapDetails.jsx  MapPage.jsx  MyPets.jsx  Notifications.jsx  Pet.jsx  (+3 more)
reports/: api.md
reportservice/: Dockerfile  Dockerfile.dev  pom.xml
userservice/: Dockerfile  Dockerfile.dev  pom.xml
(+118 files in other folders)
