[tool.poetry]
name = "datasource"
version = "0.1.0"
description = ""
authors = ["martimsantos <santos.martim@ua.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
folium = "^0.18.0"
confluent-kafka = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
