[tool.poetry]
name = "datasource"
version = "0.1.0"
description = ""
authors = ["martimsantos <santos.martim@ua.pt>", "sebastiaoteixeira <sebastiao.teixeira@ua.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.3"
folium = "^0.18.0"
confluent-kafka = "^2.6.1"
pyodbc = "^5.2.0"
mariadb = "^1.1.11"
python-dotenv = "^1.0.1"
aiomysql = "^0.2.0"
influxdb-client = "^1.48.0"
influxdb = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
